a new branch for the two external apis, the main branch has just one